图片排列demo修改

--- a/demo/arrangement/phone.less
+++ b/demo/arrangement/phone.less
@@ -74,6 +74,10 @@
             width: percentage( 2 / 9 );
             height: percentage( 2 / 6 );    
         }
+        &.size-3-1{
+            width: percentage( 3 / 9 );
+            height: percentage( 1 / 6 );    
+        }
         &.size-3-2{
             width: percentage( 3 / 9 );
             height: percentage( 2 / 6 );    
@@ -85,6 +89,20 @@
         &.size-6-4{
             width: percentage( 6 / 9 );
             height: percentage( 4 / 6 );    
+        }
+    
+        //垂直偏移
+        &.margin-1{
+            margin-top: percentage( -1 / 6 );    
+        }
+        &.margin-2{
+            margin-top: percentage( -2 / 6 );    
+        }
+        &.margin-3{
+            margin-top: percentage( -3 / 6 );    
+        }
+        &.margin-4{
+            margin-top: percentage( -4 / 6 );    
         }
     }
 }
